# storage

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile
apps/api/.cargo/: config.toml
apps/api/migration/src/: lib.rs  m20260424_050952_create_table_users.rs  m20260428_103203_add_files_and_folders.rs  m20260531_190001_add_users_auth_columns.rs  m20260531_190002_create_table_folders.rs  m20260531_190003_create_table_files.rs  m20260531_190004_create_table_file_permissions.rs  m20260531_190005_create_table_share_links.rs  m20260611_000001_add_is_favorite_to_files.rs  m20260611_000002_add_total_size_to_folders.rs  m20260613_000001_add_is_favorite_to_folders.rs  m20260613_000002_add_caption_to_files.rs  m20260716_000001_add_active_name_unique_indexes.rs
apps/api/src/: error.rs  extractors.rs  lib.rs  main.rs  server.rs  settings.rs
apps/api/src/entities/: file_permissions.rs  files.rs  folders.rs  mod.rs  prelude.rs  share_links.rs  users.rs
apps/api/src/handlers/: account.rs  accounts.rs  auth.rs  config.rs  files.rs  folders.rs  internal.rs  jobs.rs  mod.rs  share_links.rs  users.rs  watchword.rs  watchword_ws.rs
apps/api/src/jobs/: caption.rs  embed.rs  mod.rs  ocr.rs
apps/api/src/models/: folder.rs  mod.rs  owner.rs  user.rs
apps/api/src/openapi/: mod.rs  responses.rs
apps/api/src/payloads/: account.rs  auth.rs  config.rs  files.rs  folders.rs  mod.rs  share_links.rs  users.rs  watchword.rs
apps/api/src/routes/: account.rs  accounts.rs  auth.rs  config.rs  files.rs  folders.rs  jobs.rs  mod.rs  search.rs  share_links.rs  users.rs  ws.rs
apps/api/src/search/: mod.rs  rrf.rs
apps/api/src/utils/: auth.rs  folder_size.rs  mod.rs  name_dedup.rs  ocr.rs  qdrant.rs  redis.rs  storage.rs  watchword_rooms.rs
apps/api/tests/: integration_tests.rs
services/api/: .env.example  Cargo.toml
services/api/entity/: Cargo.toml
services/api/entity/src/: lib.rs  prelude.rs  users.rs
services/api/migration/: Cargo.toml
services/api/migration/src/: lib.rs  m20260424_050952_create_table_users.rs  m20260428_103203_add_files_and_folders.rs
services/api/src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  utils.rs
services/api/src/handlers/: mod.rs  root.rs  users.rs
services/api/src/models/: mod.rs  user.rs
(+192 files in other folders)
