[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
sha2 = "0.10"
tempfile = "3"
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "entity-registry",
    "schema-sync",
    "postgres-array",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "fs"] }
tracing = "0.1"
utoipa = { version = "5.4.0", features = ["uuid"] }
uuid = { version = "1", features = ["serde"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
axum_session = { version = "0.20.0" }
axum_session_redispool = { version = "0.11.0" }
dotenvy = "0.15"
config = "0.15.22"
axum-valid = "0.24.0"
validator = { version = "0.20.0", features = ["derive"] }
sentry = { version = "0.48.2", features = ["tower-axum-matched-path"] }
tower = "0.5.2"
argon2 = "0.5.3"
anyhow = "1.0.102"
thiserror = "2.0.10"
base64 = "0.22.1"
hmac = "0.12"
hex = "0.4"
urlencoding = "2"
tokio-util = { version = "0.7", features = ["io"] }
redis_pool = "0.10.0"
redis = { version = "1.2.1", features = ["tokio-comp"] }
dotenv = "0.15"
chrono = "0.4"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

[workspace]
members = [".", "migration"]
